Implement Google Cloud Platform module
This module will be used to retrieve the API token needed to make
requests on Google Cloud

The dependencies have also been updated as a result

Signed-off-by: Victor Otieno Omondi <vickz84259@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,6 @@ authors = ['Victor Otieno Omondi <victor@slick.co.ke>']
 [tool.poetry.dependencies]
 python = '^3.7'
 aiohttp = "^3.6"
+pyjwt = "^1.7"
+requests = "^2.22"
+cryptography = "^2.8"
